tests/parser/tests/cases/should_fail/malformed_list_literal/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:5
1 |   k = [1,
  |       ^ here
  = note: Encountered unclosed delimiter `[`, add a `]` after the inner expression
